<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPly2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/player2name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/team1player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/team2player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/team3player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>

</LinearLayout>