<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Play">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/next_match"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/playTeamL"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:hint="@string/team_local"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/vs"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playTeamV"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:hint="@string/team_visitor"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/result"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/resLocal"
            android:layout_marginStart="50dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="20sp"
            android:text="0"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="-"
            android:textAlignment="center"
            android:textSize="40sp"/>

        <EditText
            android:id="@+id/resVisitor"
            android:layout_marginEnd="50dp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="20sp"
            android:text="0"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btEndMatch"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="20dp"
        android:text="@string/end_of_match"
        android:textSize="30sp"/>

</LinearLayout>